[metadata]
name = awacs
version = attr: awacs.__version__
url = https://github.com/cloudtools/awacs
author = Mark Peek
author_email = mark@peek.org
description = AWS Access Policy Language creation library
long_description = file: README.rst
long_description_content_type = text/x-rst
license = New BSD license
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Changelog = https://github.com/cloudtools/awacs/blob/master/CHANGELOG.md
    Source = https://github.com/cloudtools/awacs
    Tracker = https://github.com/cloudtools/awacs/issues

[options]
include_package_data = true
install_requires =
    typing-extensions >= 3.7.4.3; python_version < "3.8"
packages = find:
# typing.Any and typing.NoReturn were added in 3.6.2
python_requires = >=3.6.2
zip_safe = false

[options.packages.find]
exclude =
  tests

[pycodestyle]
max-line-length = 88
ignore = E203,W503

[isort]
profile = black
